# repro-trait-bound-async

./: Cargo.toml
src/: lib.rs
